# V8Bot

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.docker.yml  docker-compose.podman.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  run-tests.yml
docs/: 00-agent-rules.md  00-read-this-first.md  01-product-requirements.md  02-architecture.md  03-data-model.md  04-command-design.md  05-implementation-plan.md  06-scraper-design.md  07-testing-plan.md  08-style-guide.md  09-engineering-principles.md  10-future-improvements.md  10-overnight-instructions.md  11-cicd-setup.html  11-overnight-progress.md  12-autotempest-source-of-truth.md  13-ralph-loop.md
scripts/: local_scrape_flow.py  local_watch_flow_check.py  manual_autotempest_scrape.py  setup_dev.sh
src/car_watch_bot/: __init__.py  config.py  logging_config.py  main.py
tests/: conftest.py  test_additional_source_scrapers.py  test_autotempest_scraper.py  test_bot_client.py  test_bot_commands.py  test_bot_embeds.py  test_bot_listing_actions.py  test_bot_thread_routing.py  test_conversions.py  test_digest_service.py  test_listing_service.py  test_main_scraper_registration.py  test_notification_service.py  test_repositories.py  test_scheduler_jobs.py  test_scoring.py  test_scrape_service.py  test_source_presets.py  test_source_service.py  test_structured_filters.py  test_watch_health_service.py  test_watch_service.py  test_watch_threads.py
tests/fixtures/: autotempest_comparison.html  autotempest_listing.html  (+6 more)
(+36 files in other folders)
